--- a/app/shared-components/ToastMessage/ToastMessage.scss
+++ b/app/shared-components/ToastMessage/ToastMessage.scss
@@ -32,6 +32,10 @@
 			background-color: #dff0d8;
 			.callout-text {color: #417505;}
 		}
+		.logout {
+			background-color: #f9edbe;
+			.callout-text { color: #4a4a4a;}
+		}
 		.ToastMessage__close {
 			background-image: buildIconX(#000000);
 		}
