Onboarding spreadsheet bugs #38 (GH-2259), #44 (GH-2306), and #45 (GH-2305) (#675)
* Expand toggle and select plus plan if user is basic and selects ghostery search

* Make ghostery glow icon bigger in select default search modal

* Move ghostery logo on search option selection container a little to the left

* Remove expansion by default

* Update logo sizes on choose default search view

* Adjust sizing for Yahoo, Startpage, and Bing logos in search selection modals to better match Zeplins

* Increase chance user object is available before choose plan view render. Show expanded view if user picked Glow to match expected UX. Add TODOs so we remember to update AccountReducer to help distinguish between no user present and user not fetched yet

* Factor out option card checkmark item rendering to a helper to reduce duplication.

* Update test snapshots

* Refactor choose plan view plan card feature copy rendering to a helper to reduce duplication

* Factor user status checks in select plan view out to helpers to reduce duplication and bug surface

* Move setting of default plan in plan select view to componentDidMount to avoid using setTimeout to setState in constructor

* Revised setDefaultPlan() logic in ChoosePlanView to make sure everything renders as expected when user is Plus or Premium

Co-authored-by: wlycdgr <ilya.zarembsky@gmail.com>

--- a/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
+++ b/app/dawn-hub/Views/OnboardingViews/Step3_ChooseDefaultSearchView/ChooseDefaultSearchView.scss
@@ -107,6 +107,16 @@
   justify-content: center;
 	width: 75%;
 	padding-right: 15%;
+
+	&.ghostery {
+		margin-left: -14px;
+	}
+	&.startpage {
+		margin-left: -9px;
+	}
+	&.yahoo {
+		margin-left: -9px;
+	}
 }
 
 .ChooseSearchView__optionDescriptionHeader {
@@ -290,7 +300,23 @@
 }
 
 .ChooseSearchView__modalOptionLogo {
-  padding-bottom: 40px;
+	padding: 70px 0;
+
+	&.ghostery {
+		width: 266px;
+	}
+
+  	&.yahoo {
+		width: 256px;
+	}
+
+  	&.bing {
+	  	width: 325px;
+	}
+
+  	&.startpage {
+	  	width: 235px;
+	}
 }
 
 .ChooseSearchView__modalDawnLogo {
