--- a/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
+++ b/extension-manifest-v2/app/dawn-hub/Views/OnboardingViews/Step4_ChoosePlanView/ChoosePlanView.scss
@@ -352,6 +352,7 @@ $plan-card-width: 250px;
 	justify-content: flex-start;
 	margin-bottom: 5px;
 	text-align: left;
+  	font-size: 75%;
 }
 .check {
 	display: inline-block;
