--- a/app/hub/Views/PlusView/PlusView.scss
+++ b/app/hub/Views/PlusView/PlusView.scss
@@ -110,8 +110,8 @@
 .PlusView__perkIcon.themes {
 	background-image: buildPerkThemeIcon(#a8ca59, #0a0a0a);
 }
-.PlusView__perkIcon.stats {
-	background-image: buildPerkStatsIcon(#a8ca59, #0a0a0a);
+.PlusView__perkIcon.dawnAndGlow {
+	background-image: buildPerkStatsIcon(#a8ca59, #0a0a0a); // TODO: update icon
 }
 .PlusView__perkIcon.support {
 	background-image: buildPerkSupportIcon(#a8ca59, #0a0a0a);
