GH-2323/intro hub plus tab updates (#708)
* Update subheader copy in intro hub Plus tab. Update Historical Stats blurb to Private Browser and Search

* Finish updating blurbs on Plus intro hub tab

* Remove the feature detail sections at the bottom of the Plus intro hub tab

* Update Plus intro hub tab tests

* Swap in updated icons on Plus intro hub tab

--- a/app/hub/Views/PlusView/PlusView.scss
+++ b/app/hub/Views/PlusView/PlusView.scss
@@ -110,11 +110,11 @@
 .PlusView__perkIcon.themes {
 	background-image: buildPerkThemeIcon(#a8ca59, #0a0a0a);
 }
-.PlusView__perkIcon.stats {
-	background-image: buildPerkStatsIcon(#a8ca59, #0a0a0a);
+.PlusView__perkIcon.dawnAndGlow {
+	background-image: buildPerkDawnAndGlowIcon(#a8ca59, #0a0a0a); // TODO: update icon
 }
-.PlusView__perkIcon.support {
-	background-image: buildPerkSupportIcon(#a8ca59, #0a0a0a);
+.PlusView__perkIcon.analytics {
+	background-image: buildPerkAnalyticsIcon(#a8ca59, #0a0a0a);
 }
 .PlusView__featureImage.theme {
 	max-width: 420px;
