--- a/extension-manifest-v2/app/hub/Views/PlusView/PlusView.scss
+++ b/extension-manifest-v2/app/hub/Views/PlusView/PlusView.scss
@@ -110,11 +110,11 @@
 .PlusView__perkIcon.themes {
 	background-image: buildPerkThemeIcon(#a8ca59, #0a0a0a);
 }
-.PlusView__perkIcon.stats {
-	background-image: buildPerkStatsIcon(#a8ca59, #0a0a0a);
+.PlusView__perkIcon.dawnAndGlow {
+	background-image: buildPerkDawnAndGlowIcon(#a8ca59, #0a0a0a); // TODO: update icon
 }
-.PlusView__perkIcon.support {
-	background-image: buildPerkSupportIcon(#a8ca59, #0a0a0a);
+.PlusView__perkIcon.analytics {
+	background-image: buildPerkAnalyticsIcon(#a8ca59, #0a0a0a);
 }
 .PlusView__featureImage.theme {
 	max-width: 420px;
