Clean up feature matrix formatting after removing Premium column

--- a/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
+++ b/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
@@ -676,3 +676,8 @@ section.home-template .section.section-pricing {
 		}
 	}
 }
+
+.feature-matrix-table {
+  position: relative;
+  left: -100px;
+}
