--- a/extension-manifest-v2/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
+++ b/extension-manifest-v2/app/hub/Views/UpgradePlanView/UpgradePlanView.scss
@@ -75,23 +75,12 @@ section.home-template .section.section-pricing {
 			}
 		}
 		&-gold {
-			border-right: 2px solid #6a6a6a;
 			&.is-active {
 				background-color: $price-gold;
 				color: #FFF;
 			}
 			&:hover {
 				background-color: $price-gold;
-				color: $white;
-			}
-		}
-		&-purple {
-			&.is-active {
-				background-image: linear-gradient(112deg, #5c218b, #00aef0);
-				color: #FFF;
-			}
-			&:hover {
-				background-image: linear-gradient(112deg, #5c218b, #00aef0);
 				color: $white;
 			}
 		}
@@ -237,9 +226,6 @@ section.home-template .section.section-pricing {
 		&-gold {
 			color: $price-gold;
 		}
-		&-purple {
-			color: $price-purple;
-		}
 		p {
 			margin-bottom: 0;
 			@include breakpoint($medium-large-breakpoint down) {
@@ -281,9 +267,6 @@ section.home-template .section.section-pricing {
 			}
 			&.plus {
 				height: 498px;
-			}
-			&.premium {
-				height: 526px;
 			}
 		}
 		h2 {
@@ -347,26 +330,6 @@ section.home-template .section.section-pricing {
 				background-image: url('/app/images/hub/upgrade/ghostery-plus-card.svg')
 			}
 		}
-		.ghostery-premium-image-container {
-			position: relative;
-		}
-		.ghostery-premium-image {
-			position: absolute;
-			margin-top: -79px;
-			margin-left: 9px;
-			width: 233px;
-			height: 161px;
-			background-image: url('/app/images/hub/upgrade/ghostery-premium-card.svg');
-		}
-		.ghostery-premium-image-background {
-			margin-top: -3px;
-			width: 250px;
-			height: 85px;
-			background-image: linear-gradient(to right, rgba(113,1,116,.25), rgba(90,37,142,.25) 18%, rgba(42,110,194,.25) 57%, rgba(12,156,227,.25) 86%, rgba(0,174,240,.25));
-			@include breakpoint($medium-large-breakpoint down) {
-				background-image: none;
-			}
-		}
 		.button {
 			margin-top: 10px;
 			margin-bottom: rem-calc(20);
@@ -384,15 +347,6 @@ section.home-template .section.section-pricing {
 		}
 	}
 
-	.premium-sparkle {
-		margin-left: 5px;
-		display: inline-block;
-		vertical-align: middle;
-		height: 14px;
-		width: 12px;
-		background-repeat: no-repeat;
-		background-image: url('/app/images/premium-sparkle.svg');
-	}
 	.check {
 		display: inline-block;
 		width: 20px;
@@ -404,9 +358,6 @@ section.home-template .section.section-pricing {
 		}
 		&.yellow {
 			background-image: buildCheckIcon($price-gold);
-		}
-		&.purple {
-			background-image: buildCheckIcon($price-purple);
 		}
 	}
 	.x-icon {
@@ -424,9 +375,6 @@ section.home-template .section.section-pricing {
 			}
 			&.yellow {
 				color: $price-gold;
-			}
-			&.purple {
-				color: $price-purple;
 			}
 		}
 		.footer-buttons {
@@ -518,26 +466,6 @@ section.home-template .section.section-pricing {
 		cursor: pointer
 	}
 
-	.key-container {
-		height: 70px;
-		width: 100%;
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
-		&.mobile {
-			@include breakpoint($medium-large-breakpoint up) {
-				display: none
-			}
-		}
-		@include breakpoint($medium-large-breakpoint down) {
-			justify-content: center;
-		}
-		.midnight-note {
-			margin-left: 15px;
-			color: $price-purple-alt;
-		}
-	}
-
 	.button {
 		text-transform: none;
 		white-space: nowrap;
@@ -553,31 +481,13 @@ section.home-template .section.section-pricing {
 			background-color: $price-gold-hover;
 		}
 	}
-	.button-premium {
-		height: 38px;
-		padding: 7.7px 14px;
-		line-height: 22px;
-		background: linear-gradient(
-			45deg,
-			#6c097a 50%,
-			#03a9ec
-		);
-		background-size: 200% 100%;
-		background-position: 100% 50%;
-		transition: 0.25s all;
-		border: none;
-		&:hover {
-			background-position: 0% 50%;
-			transition: 0.25s all;
-		}
-	}
 
 	.comparison-table {
 		background-color: $alabaster;
 		padding-bottom: rem-calc(100);
 		margin-top: rem-calc(40);
 		@include breakpoint($medium-large-breakpoint down) {
-			margin-top: 0;
+			margin-top: rem-calc(40);
 			padding-top: 0;
 			background-color: $white;
 		}
@@ -686,6 +596,9 @@ section.home-template .section.section-pricing {
 				tr:nth-child(2n+1) {
 					background-color: #FFF;
 				}
+			  	tr:last-child {
+				  background-color: #F7F7F7;
+				}
 			}
 			@include breakpoint ($medium-large-breakpoint down) {
 				tr:nth-child(4n), tr:nth-child(4n+3) {
@@ -715,9 +628,6 @@ section.home-template .section.section-pricing {
 		}
 		.bg-gold {
 			background-color: $price-gold;
-		}
-		.bg-purple-blue {
-			background-image: linear-gradient(120deg, #720174 0%, #5a258e 18%, #2a6ec2 57%, #0c9ce3 86%, #00aef0 100%);
 		}
 		.sep {
 			background:$alabaster;
@@ -768,4 +678,10 @@ section.home-template .section.section-pricing {
 			}
 		}
 	}
+}
+
+.feature-matrix-table {
+  position: relative;
+  left: -100px;
+  margin-top: 60px;
 }
