Panel: fix header style

--- a/app/scss/partials/_header.scss
+++ b/app/scss/partials/_header.scss
@@ -42,7 +42,7 @@
 	.top-bar {
 		background-color: $ghosty-blue;
 		color: $white;
-		padding: 7px 0 7px 15px;
+		padding: 0 0 0 15px;
 		height: 36px;
 		.header-logo {
 			height: 21px;
