--- a/app/shared-components/Tooltip/Tooltip.scss
+++ b/app/shared-components/Tooltip/Tooltip.scss
@@ -164,7 +164,7 @@
 		margin-left: 28px;
 	}
 
-	.CliqzFeature .g-tooltip .tooltip-content.top {
+	.CommonFeature .g-tooltip .tooltip-content.top {
 		&.top-right {
 			margin-left: -40px;
 			&:after {
@@ -200,7 +200,7 @@
 		margin-top: -18px;
 	}
 
-	.CliqzFeature .g-tooltip .tooltip-content.right {
+	.CommonFeature .g-tooltip .tooltip-content.right {
 		margin-left: 16px;
 	}
 }
