--- a/app/scss/android/_blocking_tab.scss
+++ b/app/scss/android/_blocking_tab.scss
@@ -333,28 +333,28 @@
 	align-items: center;
 	justify-content: space-between;
 	&:not(.whitelisted) {
-		.cliqz-tracker-trust {
+		.common-tracker-trust {
 			visibility: hidden;
 			cursor: pointer;
 			.border { stroke: #d8d8d8; }
 			.background { fill: #f7f7f7; }
 			.trust-circle { stroke: #9B9B9B; }
 		}
-		.cliqz-tracker-trust > g > path:nth-child(1) {
+		.common-tracker-trust > g > path:nth-child(1) {
 			stroke: #d8d8d8;
 		}
-		.cliqz-tracker-trust > g > path:nth-child(2) {
+		.common-tracker-trust > g > path:nth-child(2) {
 			fill: #f7f7f7;
 		}
-		.cliqz-tracker-scrub > g > .border {
+		.common-tracker-scrub > g > .border {
 			fill: #FFF;
 			stroke: #00AEF0;
 		}
-		.cliqz-tracker-scrub > g > .background {
+		.common-tracker-scrub > g > .background {
 			fill: #00AEF0;
 			stroke: #FFF;
 		}
-		.cliqz-tracker-scrub {
+		.common-tracker-scrub {
 			pointer-events: none;
 			.background.protected {
 				fill: #00AEF0;
@@ -366,10 +366,10 @@
 	}
 	&.whitelisted {
 		flex-direction: row-reverse;
-		.cliqz-tracker-trust {
+		.common-tracker-trust {
 			pointer-events: none;
 		}
-		.cliqz-tracker-scrub {
+		.common-tracker-scrub {
 			visibility: hidden;
 			pointer-events: auto;
 			cursor: pointer;
