--- a/app/scss/android/_overview_tab.scss
+++ b/app/scss/android/_overview_tab.scss
@@ -89,7 +89,7 @@
 		.sub-component.pause-button .button {
 			&.active:hover {
 				border-color: #0093bd;
-				background-color: $cliqz-feature--blue;
+				background-color: $common-feature--blue;
 				box-shadow: inset 0px 1px 7px 2px #0093bd;
 			}
 			&:not(.active):hover { background-color: $white; }
@@ -100,32 +100,32 @@
 		}
 	}
 
-	.OverviewTab__CliqzFeaturesContainer {
+	.OverviewTab__CommonFeaturesContainer {
 		margin: 12px 0;
 
-		.OverviewTab__CliqzFeature {
+		.OverviewTab__CommonFeature {
 			width: 55px;
 			display: inline-block;
 			margin: 0 10px;
 		}
 
-		.CliqzFeature--active.clickable {
+		.CommonFeature--active.clickable {
 			&:hover {
-				.CliqzFeature__status { color: $cliqz-feature--blue; }
-				.CliqzFeature__icon--anti-track { background-image: buildIconAntiTracking($cliqz-feature--blue); }
-				.CliqzFeature__icon--ad-block { background-image: buildIconAdBlocking($cliqz-feature--blue); }
-				.CliqzFeature__icon--smart-block { background-image: buildIconSmartBlocking($cliqz-feature--blue); }
-				.CliqzFeature__feature-name { color: $cliqz-feature--blue; }
+				.CommonFeature__status { color: $common-feature--blue; }
+				.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--blue); }
+				.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--blue); }
+				.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--blue); }
+				.CommonFeature__feature-name { color: $common-feature--blue; }
 			}
 		}
 
-		.CliqzFeature--inactive.clickable {
+		.CommonFeature--inactive.clickable {
 			&:hover {
-				.CliqzFeature__status { color: $cliqz-feature--gray; }
-				.CliqzFeature__icon--anti-track { background-image: buildIconAntiTracking($cliqz-feature--gray); }
-				.CliqzFeature__icon--ad-block { background-image: buildIconAdBlocking($cliqz-feature--gray); }
-				.CliqzFeature__icon--smart-block { background-image: buildIconSmartBlocking($cliqz-feature--gray); }
-				.CliqzFeature__feature-name { color: $cliqz-feature--gray; }
+				.CommonFeature__status { color: $common-feature--gray; }
+				.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--gray); }
+				.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--gray); }
+				.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--gray); }
+				.CommonFeature__feature-name { color: $common-feature--gray; }
 			}
 		}
 
