--- a/app/scss/android/_variables.scss
+++ b/app/scss/android/_variables.scss
@@ -22,8 +22,8 @@ $tab--nav-height: 50px;
 // Colors
 $ghosty-blue:						#00AEF0;
 $ghosty-blue--lighter:	#28C4FF;
-$cliqz-feature--blue:		#1dafed;
-$cliqz-feature--gray:		#c8c7c2;
+$common-feature--blue:		#1dafed;
+$common-feature--gray:		#c8c7c2;
 $white:									#FFFFFF;
 $tundora:								#4A4A4A;
 $button-trust:					#9FCA4C;
