--- a/app/scss/panel.scss
+++ b/app/scss/panel.scss
@@ -23,6 +23,9 @@
 // Import shared helpers
 @import 'shared_helper_classes';
 
+// ghostery-ui
+@import "@ghostery/ui/src/index.css";
+
 html body {
 	margin: 0px;
 	font-size: 75%;
