--- a/app/templates/onboarding.html
+++ b/app/templates/onboarding.html
@@ -19,9 +19,9 @@
 		<meta name="theme-color" content="#00AEF0" />
 		<title>Welcome to Ghostery</title>
 		<script src="../../dist/onboarding.js" async type="module"></script>
+		<link rel="stylesheet" href="../../dist/css/onboarding_styles.css" />
 	</head>
 	<body>
-		<button id="complete">Complete</button>
-		<button id="skip">Skip</button>
+		<gh-onboarding></gh-onboarding>
 	</body>
 </html>
