Update ui and skip logic

--- a/app/scss/partials/_summary.scss
+++ b/app/scss/partials/_summary.scss
@@ -224,3 +224,10 @@
 	left: 10px;
 	top: 11px;
 }
+
+.Summary__onboardingState {
+	padding: 0 0 16px;
+	border-bottom: none;
+	border-left: none;
+	border-right: none;
+}
