--- a/app/scss/android/_mixins.scss
+++ b/app/scss/android/_mixins.scss
@@ -76,46 +76,48 @@
 }
 
 %g-tooltip-body {
-	@extend %g-tooltip-animation;
-	pointer-events:none;
-	font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
-	font-size: 12px;
-	font-weight: 400;
-	-webkit-font-smoothing: antialiased;
-	text-align: center;
-	white-space: nowrap;
-	background: #333;
-	background: rgba(0,0,0,.8);
-	border-radius: 1px;
-	color: #fff;
-	padding: 3px 5px;
-	position: absolute;
-	z-index: 10;
-	font-size: 12px;
-	-webkit-box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
-	-moz-box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
-	box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
+	&:hover:before {
+		@extend %g-tooltip-animation;
+		pointer-events:none;
+		font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+		font-size: 12px;
+		font-weight: 400;
+		-webkit-font-smoothing: antialiased;
+		text-align: center;
+		white-space: nowrap;
+		background: #333;
+		background: rgba(0,0,0,.8);
+		border-radius: 1px;
+		color: #fff;
+		padding: 3px 5px;
+		position: absolute;
+		z-index: 10;
+		font-size: 12px;
+		-webkit-box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
+		-moz-box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
+		box-shadow: 0px 2px 2px -1px rgba(#020202, 0.75);
+	}
 }
 
 %g-tip-body {
-	@extend %g-tooltip-animation;
-	border-style: solid;
-	border-color: #333 transparent;
-	content: "";
-	position: absolute;
-	z-index: 11;
+	&:hover:after {
+		@extend %g-tooltip-animation;
+		border-style: solid;
+		border-color: #333 transparent;
+		content: "";
+		position: absolute;
+		z-index: 11;
+	}
 }
 
 %g-tooltip {
+	@extend %g-tooltip-body;
+	@extend %g-tip-body;
+
 	display: inline;
 	position: relative;
-
 	&:hover:before {
-		@extend %g-tooltip-body;
 		content: attr(data-g-tooltip);
-	}
-	&:hover:after {
-		@extend %g-tip-body;
 	}
 }
 
@@ -135,12 +137,10 @@
 %g-tooltip-down-left {
 	@extend %g-tooltip;
 	&:hover:before {
-		@extend %g-tooltip;
 		right: -100%;
 		top: 20px;
 	}
 	&:hover:after {
-		@extend %g-tooltip;
 		border-width: 0 6px 6px 6px;
 		left: 20%;
 		top: 14px;
@@ -150,12 +150,10 @@
 %g-tooltip-down-right {
 	@extend %g-tooltip;
 	&:hover:before {
-		@extend %g-tooltip;
 		left: -100%;
 		top: 20px;
 	}
 	&:hover:after {
-		@extend %g-tooltip;
 		border-width: 0 6px 6px 6px;
 		left: 20%;
 		top: 14px;
