--- a/extension-manifest-v2/app/scss/_settings_hub.scss
+++ b/extension-manifest-v2/app/scss/_settings_hub.scss
@@ -436,7 +436,7 @@ $input-background-focus: $white;
 $input-background-disabled: $mercury;
 $input-border: 1px solid $silver-chalice;
 $input-border-focus: 1px solid $bright-gray;
-$input-padding: $form-spacing / 2;
+$input-padding: calc($form-spacing / 2);
 $input-shadow: inset 0 1px 2px rgba($black, 0.1);
 $input-shadow-focus: 0 0 5px $medium-gray;
 $input-cursor-disabled: not-allowed;
@@ -777,7 +777,7 @@ $table-row-stripe-hover: darken($table-background, $table-color-scale + $table-h
 $table-is-striped: true;
 $table-striped-background: smart-scale($table-background, $table-color-scale);
 $table-stripe: even;
-$table-head-background: smart-scale($table-background, $table-color-scale / 2);
+$table-head-background: smart-scale($table-background, calc($table-color-scale / 2));
 $table-head-row-hover: darken($table-head-background, $table-hover-scale);
 $table-foot-background: smart-scale($table-background, $table-color-scale);
 $table-foot-row-hover: darken($table-foot-background, $table-hover-scale);
