--- a/extension-manifest-v2/app/templates/trackers-preview.html
+++ b/extension-manifest-v2/app/templates/trackers-preview.html
@@ -8,10 +8,17 @@
     />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script src="../../dist/trackers_preview_popup.js" type="module" async></script>
-    <link rel="stylesheet" href="../../dist/css/trackers_preview_popup_styles.css" />
+    <script
+      src="../../dist/trackers_preview_popup.js"
+      type="module"
+      async
+    ></script>
+    <link
+      rel="stylesheet"
+      href="../../dist/css/trackers_preview_popup_styles.css"
+    />
   </head>
   <body>
-    <wtm-trackers-preview></wtm-trackers-preview>
+    <gh-trackers-preview></gh-trackers-preview>
   </body>
 </html>
