--- a/extension-manifest-v2/app/templates/autoconsent.html
+++ b/extension-manifest-v2/app/templates/autoconsent.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Whotracks.me Report</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <meta content="utf-8" http-equiv="encoding" />
-    <script src="../../dist/trackers_preview_popup.js" async></script>
+    <script src="../../dist/autoconsent_popup.js" async></script>
     <link rel="stylesheet" href="../../dist/css/ghostery_ui.css" />
   </head>
   <body>
-    <gh-trackers-preview></gh-trackers-preview>
+    <gh-autoconsent></gh-autoconsent>
   </body>
 </html>
