--- a/extension-manifest-v2/app/scss/partials/_common_feature.scss
+++ b/extension-manifest-v2/app/scss/partials/_common_feature.scss
@@ -96,6 +96,7 @@ $common-feature--darker-gray: #a4a4a4;
 	}
 	.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--blue); }
 	.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--blue); }
+	.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--blue); }
 	.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--blue); }
 	.CommonFeature__feature-name { color: $common-feature--blue; }
 
@@ -103,6 +104,7 @@ $common-feature--darker-gray: #a4a4a4;
 		.CommonFeature__status { color: $common-feature--darker-blue; }
 		.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--darker-blue); }
 		.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--darker-blue); }
+		.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--darker-blue); }
 		.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--darker-blue); }
 		.CommonFeature__feature-name { color: $common-feature--darker-blue; }
 	}
@@ -112,6 +114,7 @@ $common-feature--darker-gray: #a4a4a4;
 	.CommonFeature__status { color: $common-feature--pale-blue; }
 	.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--pale-blue); }
 	.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--pale-blue); }
+	.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--pale-blue); }
 	.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--pale-blue); }
 	.CommonFeature__feature-name { color: $common-feature--pale-blue; }
 
@@ -121,6 +124,7 @@ $common-feature--darker-gray: #a4a4a4;
 	.CommonFeature__status { color: $common-feature--gray; }
 	.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--gray); }
 	.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--gray); }
+	.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--gray); }
 	.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--gray); }
 	.CommonFeature__feature-name { color: $common-feature--gray; }
 
@@ -128,6 +132,7 @@ $common-feature--darker-gray: #a4a4a4;
 		.CommonFeature__status { color: $common-feature--darker-gray; }
 		.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--darker-gray); }
 		.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--darker-gray); }
+		.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--darker-gray); }
 		.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--darker-gray); }
 		.CommonFeature__feature-name { color: $common-feature--darker-gray; }
 	}
@@ -137,6 +142,7 @@ $common-feature--darker-gray: #a4a4a4;
 	.CommonFeature__status { color: $common-feature--light-gray; }
 	.CommonFeature__icon--anti-track { background-image: buildIconAntiTracking($common-feature--light-gray); }
 	.CommonFeature__icon--ad-block { background-image: buildIconAdBlocking($common-feature--light-gray); }
+	.CommonFeature__icon--autoconsent { background-image: buildIconAutoconsent($common-feature--light-gray); }
 	.CommonFeature__icon--smart-block { background-image: buildIconSmartBlocking($common-feature--light-gray); }
 	.CommonFeature__feature-name { color: $common-feature--light-gray; }
 }
