Disable features in OverviewTab for onboarding

--- a/extension-manifest-v2/app/scss/panel_android.scss
+++ b/extension-manifest-v2/app/scss/panel_android.scss
@@ -39,6 +39,9 @@
 // Import shared helpers
 @import 'shared_helper_classes';
 
+// ghostery-ui
+@import "@ghostery/ui/src/index.css";
+
 // NeedsReload Header
 .NeedsReload {
 	height: 0;
