--- a/extension-manifest-v3/src/pages/panel/styles.css
+++ b/extension-manifest-v3/src/pages/panel/styles.css
@@ -27,6 +27,7 @@ html {
   --ui-font-label-l: 600 16px / 20px var(--ui-font-family);
   --ui-font-label-m: 600 14px / 18px var(--ui-font-family);
   --ui-font-label-s: 600 12px / 16px var(--ui-font-family);
+  --ui-font-label-xs: 600 11px / 14px var(--ui-font-family);
 
   --ui-font-body-l: 400 16px / 20px var(--ui-font-family);
   --ui-font-body-m: 400 14px / 18px var(--ui-font-family);
