Company dialog + refactor UI

--- a/extension-manifest-v2/app/scss/panel_android.scss
+++ b/extension-manifest-v2/app/scss/panel_android.scss
@@ -40,7 +40,7 @@
 @import 'shared_helper_classes';
 
 // ghostery-ui
-@import "@ghostery/ui/src/index.css";
+@import "@ghostery/ui/src/styles/pages.css";
 
 // NeedsReload Header
 .NeedsReload {
