--- a/extension-manifest-v2/app/scss/onboarding.scss
+++ b/extension-manifest-v2/app/scss/onboarding.scss
@@ -1,4 +1,4 @@
-@import "@ghostery/ui/src/index.css";
+@import "@ghostery/ui/src/styles/pages.css";
 
 html, body {
   background: var(--ui-color-gray-800);
