--- a/ui/src/styles/pages.css
+++ b/ui/src/styles/pages.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url('./fonts/Roboto-Regular.ttf');
+  src: local('Roboto'), url('../fonts/Roboto-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: local('Roboto'), url('./fonts/Roboto-Medium.ttf');
+  src: local('Roboto'), url('../fonts/Roboto-Medium.ttf');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('./fonts/Roboto-Medium.ttf');
+  src: url('../fonts/Roboto-Medium.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -24,7 +24,7 @@
 
 @font-face {
   font-family: 'Roboto Condensed';
-  src: local('Roboto Condensed'), url('./fonts/RobotoCondensed-Regular.ttf');
+  src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Regular.ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 @font-face {
   font-family: 'Roboto Condensed';
-  src: local('Roboto Condensed'), url('./fonts/RobotoCondensed-Bold.ttf');
+  src: local('Roboto Condensed'), url('../fonts/RobotoCondensed-Bold.ttf');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -62,6 +62,8 @@ html {
   --ui-color-warning-500: #ffbb00;
   --ui-color-error-500: #ff4500;
   --ui-color-error-400: #ff5d35;
+
+  --ui-color-current: currentColor;
 
   /* Fonts */
 
@@ -108,6 +110,8 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
+
+  --ui-text-color-anchor: var(--ui-color-primary-500);
 }
 
 @media screen and (min-width: 768px) {
