Update WebPack to version 5

--- a/extension-manifest-v2/app/scss/panel.scss
+++ b/extension-manifest-v2/app/scss/panel.scss
@@ -24,7 +24,7 @@
 @import 'shared_helper_classes';
 
 // ghostery-ui
-@import "@ghostery/ui/src/index.css";
+@import "@ghostery/ui/css";
 
 html body {
 	margin: 0px;
